- fix switch (remember the state, also when not changed) - added callout styles - removed overflow hidden to allow position:sticky to work - remove double template form inline edit. (killed the working of it)

--- a/resources/assets/open-admin/scss/skeleton.scss
+++ b/resources/assets/open-admin/scss/skeleton.scss
@@ -163,7 +163,6 @@
 .wrapper {
     min-height: 100vh;
     position: relative;
-    overflow: hidden;
 }
 
 /*-----------------------------------------------------*/
@@ -172,7 +171,7 @@
 
 aside#sidebar {
     float: left;
-    min-height: 100%;
+    min-height: calc(100% - 56px);
     position: absolute;
     transition: all 0.3s;
 }
